feat(settings): add debug logging and ad skipping toggles

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,14 @@
   <h3>API Key Settings</h3>
   <label for="apiKey">Gemini API Key:</label>
   <input type="password" id="apiKey" placeholder="Enter your API key">
-  <button id="save">Save</button>
+  <br><br>
+   <label for="debug">Enable Debug Logging:</label>
+   <input type="checkbox" id="debug">
+   <br><br>
+   <label for="skipEnabled">Enable Ad Skipping:</label>
+   <input type="checkbox" id="skipEnabled" checked>
+   <br><br>
+   <button id="save">Save</button>
   <div id="status"></div>
   <script src="popup.js"></script>
 </body>
